final fix for blog title on mobile

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -599,7 +599,7 @@ footer.sticky-bottom {
 
   h1 {
     color: var(--global-theme-color);
-    font-size: clamp(2.5rem, 14vw, 5rem);
+    font-size: clamp(2.4rem, 13vw, 5rem);
   }
 }
 
